--- a/task1.html
+++ b/task1.html
@@ -5,19 +5,21 @@
 	 <script src="task1_script.js"></script>
 
 </head>
-<body>
+<body class="text">
 
- <h3>Введите коэффициенты:</h3>
- <p>
-	<b><input type="number" value="0"> X<sup>2</sup> + <input type = "number" value="0"> X + <input type ="number"  value="0"> = 0</b>
+ <h3> Введите коэффициенты:</h3>
+ <p class = "inp">
+	<b><input type="number" value="1"> X<sup>2</sup> + <input type = "number" value="0"> X + <input type ="number"  value="0"> = 0</b>
+	
+ 
  </p>
-<button onclick="addRow('myTable');"> Посчитать! </button>
+<button class="text btn" onclick="addRow('myTable');"> Посчитать! </button>
 
-<p><b>Ваш ответ:</b></p>
-<table id="myTable"  border="2">
-  <tbody>
-    <tr>
-      <td><b>X<sub>1</sub></b></td><td><b>X<sub>2</sub></b></td>
+<p  ><b>Ваш ответ:</b></p>
+<table class="table1" >
+  <tbody >
+    <tr class = "row1">
+      <th class = " td1" ><b>X<sub>1</sub></b></th ><th class = " td1" ><b>X<sub>2</sub></b></th>
     </tr>
   </tbody>
 </table>
